--- a/man/icesh.pod
+++ b/man/icesh.pod
@@ -457,6 +457,10 @@ Let icewm restart itself.
 
 Let icewm execute the C<SuspendCommand>.
 
+=item B<winoptions>
+
+Let icewm reload the C<winoptions>.
+
 =item B<guievents>
 
 Monitor the B<ICEWM_GUI_EVENT> property and report all changes.
