Add pid and sizeto.

--- a/man/icesh.pod
+++ b/man/icesh.pod
@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-icesh - control window properties and the IceWM window manager
+ icesh - control window properties and the IceWM window manager
 
 =head1 SYNOPSIS
 
@@ -14,7 +14,7 @@ icesh - control window properties and the IceWM window manager
 
 =head1 DESCRIPTION
 
-B<icesh> provides 81 commands to change or query a window's state,
+B<icesh> provides 83 commands to change or query a window's state,
 and to interact with the L<icewm(1)> window manager. Command arguments
 are called actions. Window actions operate on a selection of windows.
 B<icesh> has several options to select and filter windows.  Options and
@@ -23,7 +23,8 @@ another from left to right. Therefore, an option can only affect a
 subsequent action, but not a previous one. Because of this, an action
 can operate on a different selection of windows than a previous action,
 if it is preceded by a new select option. In combination with filter
-options, this gives B<icesh> its expressive power.
+options, this gives B<icesh> its expressive power. Use it in
+L<icewm-keys(5)> to define your own window management hotkeys.
 
 =head1 OPTIONS
 
@@ -115,18 +116,23 @@ inverted.
 =item B<-L>, B<-Layer> I<LAYER>
 
 Filters clients by I<GNOME window layer>, which can either be a layer
-name (see below) or a layer number.
+name (see below) or a layer number.  If I<LAYER> starts with an
+exclamation mark then the filtering is inverted.
 
 =item B<-S>, B<-State> I<STATE>
 
 Filters clients by I<GNOME window state>. Clients which have at least
 a state of I<STATE> are selected.  The window state refers to details
-like B<minized> or B<maximized> and is explained below.
+like B<minized> or B<maximized> and is explained below.  If I<STATE>
+starts with an exclamation mark then the filtering is inverted.
+A question mark C<?> filters clients with any bit set in I<STATE>.
 
 =item B<-W>, B<-Workspace> I<WORKSPACE>
 
 Filter clients by workspace. Workspace I<WORKSPACE> is either a
 workspace name or a workspace number counting from zero.
+If I<WORKSPACE> starts with an exclamation mark then the filtering is
+inverted.
 
 =item B<-X>, B<-Xinerama> I<MONITOR>
 
@@ -190,6 +196,10 @@ Terminate the window.
 =item B<id>
 
 Print window identifiers for the selected windows.
+
+=item B<pid>
+
+Print process identifiers for the selected windows.
 
 =item B<list>
 
@@ -259,6 +269,14 @@ Do show window on taskbar.
 
 Resize window to I<WIDTH> by I<HEIGHT> window units.
 
+=item B<sizeto> I<WIDTH> I<HEIGHT>
+
+Resize window to I<WIDTH> by I<HEIGHT> pixels. If I<WIDTH> or I<HEIGHT>
+ends with a percent sign C<%>, then they refer to a percentage of the
+desktop work area. For instance, C<sizeto 50% 100%>a resizes to half
+the desktop width and whatever height is available above or below the
+taskbar.
+
 =item B<move> I<X> I<Y>
 
 Move the selected window or windows to the screen position I<X> I<Y>.
@@ -271,23 +289,23 @@ Displace window by I<X> I<Y> pixels.
 
 =item B<center>
 
-Position window in the center of the screen.
+Position window in the center of the desktop work area.
 
 =item B<left>
 
-Position window against the left side of the screen.
+Position window against the left side of the desktop work area.
 
 =item B<right>
 
-Position window against the right side of the screen.
+Position window against the right side of the desktop work area.
 
 =item B<top>
 
-Position window against the top side of the screen.
+Position window against the top side of the desktop work area.
 
 =item B<bottom>
 
-Position window against the bottom side of the screen.
+Position window against the bottom side of the desktop work area.
 
 =item B<setIconTitle> I<TITLE>
 
@@ -688,6 +706,10 @@ Restore all hidden clients, minimize all clients on the current
 workspace and activate Firefox.
 
     icesh -S hidden restore -a -W "this" minimize -a -c Firefox activate
+
+Resize the focused window to occupy the right half of the desktop area.
+
+    icesh -f sizeto 49% 100% sync top sync right sync raise activate
 
 =head1 ENVIRONMENT
 
