--- a/man/icewm-preferences.pod
+++ b/man/icewm-preferences.pod
@@ -1684,6 +1684,29 @@ Paint the background image over all multihead monitors combined.
 
 =head1 EXAMPLES
 
+    Alpha=1
+    Splash="IceWM.jpg"
+    LimitSize=0
+    LimitPosition=0
+    LimitByDockLayer=1
+    QuickSwitchToAllWorkspaces=1
+    QuickSwitchHugeIcon=1
+    QuickSwitchFillSelection=1
+    TaskBarMailboxStatusBeepOnNewMail=1
+    TaskBarMailboxStatusCountMessages=1
+    TaskBarShowMEMStatus=0
+    TaskBarShowCollapseButton=1
+    TaskBarWorkspacesLimit="8"
+    ShowProgramsMenu=1
+    ShowAddressBar=0
+    ToolTipDelay=200
+    ToolTipTime=5000
+    AutoHideDelay=900
+    AutoShowDelay=100
+    EdgeResistance=3
+    KeySysMenu="Multi_key"
+    KeySysWinListMenu="Shift+Ctrl+Esc"
+
 =head1 FILES
 
 Locations for the F<preferences> file are as follows:
